--- a/MyRayTracing/Project1/Project1.vcxproj.filters
+++ b/MyRayTracing/Project1/Project1.vcxproj.filters
@@ -18,12 +18,9 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Image.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Image.h">
+    <ClInclude Include="vec3.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
