--- a/MyRayTracing/Project1/Project1.vcxproj.filters
+++ b/MyRayTracing/Project1/Project1.vcxproj.filters
@@ -32,5 +32,17 @@
     <ClInclude Include="hittable.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="sphere.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="hittable_list.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="rtweekend.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="camera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
